--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "firebase": "^4.1.3",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
