--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^4.1.3",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "styled-components": "^2.1.1"
   }
 }
